fixed z-index of images

--- a/css/styles.css
+++ b/css/styles.css
@@ -934,6 +934,7 @@ header.hero p {
     bottom: 0;
     left: 0;
     right: 0;
+    z-index: 3;
 }
 
 .logo {
